commands running all tests with different GCs